--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open",
+    "cypress:chorme": "cypress run -b chrome"
   },
   "dependencies": {
     "next": "11.1.2",
@@ -17,6 +19,7 @@
   "devDependencies": {
     "@types/react": "^17.0.20",
     "babel-plugin-styled-components": "^1.13.2",
+    "cypress": "^8.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "^4.4.3"
